# Re-Mem

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.docker/: Dockerfile  Dockerfile.dev
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md
docs/stories/: story_1.md  story_2.md  story_3.md
docs/testing/: test_coverage.md
k8s/: deployment.yml
scripts/: init.sql  migrate_add_auth.sql  migrate_add_decks.sql  migrate_add_statistics.sql
src/: lib.rs  main.rs
src/application/: dtos.rs  mod.rs  services.rs  use_cases.rs
src/application/dtos/: auth_dtos.rs  card_dtos.rs  deck_dtos.rs  import_dtos.rs  mod.rs  review_dtos.rs  stats_dtos.rs  user_dtos.rs
src/application/services/: auth_service.rs  card_service.rs  deck_service.rs  mod.rs  review_service.rs  user_service.rs
src/application/use_cases/: create_card.rs  create_deck.rs  create_user.rs  delete_card.rs  delete_deck.rs  get_deck_stats.rs  get_decks.rs  get_user.rs  get_user_cards.rs  get_user_stats.rs  import_anki.rs  import_tsv.rs  login_user.rs  mod.rs  register_user.rs  review_card.rs
src/domain/: entities.rs  mod.rs  ports.rs  repositories.rs  value_objects.rs
src/domain/entities/: card.rs  deck.rs  mod.rs  review.rs  review_log.rs  stats.rs  user.rs
src/domain/repositories/: card_repository.rs  deck_repository.rs  mod.rs  review_log_repository.rs  review_repository.rs  stats_repository.rs  user_repository.rs
src/infrastructure/: ai_validator.rs  database.rs  event_handlers.rs  mod.rs  repositories.rs
src/infrastructure/repositories/: mod.rs  pg_card_repository.rs  pg_deck_repository.rs  pg_review_log_repository.rs  pg_review_repository.rs  pg_stats_repository.rs  pg_user_repository.rs
src/presentation/: handlers.rs  mod.rs  router.rs
src/presentation/middleware/: auth.rs
src/shared/: error.rs  event_bus.rs  jwt.rs  mod.rs
tests/: deck_card_tests.rs  integration_tests.rs
