[package]
name = "re_mem"
version = "0.1.0"
edition = "2021"
authors = ["Team ReMem"]
description = "Language learning application backend using FSRS and AI-based answer checking"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Web framework
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async traits
async-trait = "0.1.89"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }

# Spaced repetition (to be integrated in Phase 2)
fsrs = "5.2.0"

# ID generation
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4.44", features = ["serde"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Authentication
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Environment variables
dotenv = "0.15.0"

# HTTP utilities
http = "1.4.0"

# OpenAI client
async-openai = { version = "0.33.0", features = ["chat-completion", "embedding"] }
reqwest = { version = "0.13.2", features = ["json"] }

[dev-dependencies]
# Testing
tokio-test = "0.4.5"
mockito = "1.7.2"

[[bin]]
name = "re_mem"
path = "src/main.rs"
test = false

[profile.dev]
opt-level = 1
incremental = true

[profile.test]
debug = 0
incremental = true

[profile.release]
opt-level = 3
lto = true
